# eudaq

./: .gitignore  CMakeLists.txt
main/exe/src/: euCliConverter.cxx  euCliReader.cxx
main/lib/core/include/eudaq/: StandardPlane.hh
main/lib/core/src/: StandardPlane.cc
main/lib/plugins/: BDAQ53ConverterPlugin.cc
main/lib/src/: RD53ADecoder.cc
main/python/src/: PyProducer.cpp
monitors/onlinemon/include/: BaseCollection.hh  HitmapHistos.hh  OnlineMon.hh  SimpleStandardHit.hh  SimpleStandardPlane.hh  TimingHitmapCollection.hh  TimingHitmapHistos.hh
monitors/onlinemon/src/: HitmapCollection.cc  HitmapHistos.cc  OnlineMon.cxx  SimpleStandardPlane.cc  TimingHitmapCollection.cc  TimingHitmapHistos.cc
monitors/rootmonitor/: CMakeLists.txt
python/: PyEUDAQWrapper.py
user/: CMakeLists.txt
user/CMSIT/: CMakeLists.txt
user/CMSIT/module/: CMakeLists.txt
user/CMSIT/module/src/: CMSITConverterPlugin.cc
user/caen-dt5742/: CMakeLists.txt  README.md
user/caen-dt5742/misc/: CAENDT5742_example.conf  CAENDT5742_example.ini  CAEN_connections_example.csv
user/caen-dt5742/module/: CMakeLists.txt
user/caen-dt5742/module/exe/: caenCliRootWF.cxx
user/caen-dt5742/module/src/: CAENDT5748RawEvent2StdEventConverter.cc  CAENDT5748RawEvent2TTreeEventConverter.cc  CAEN_DT5748RawEvent2StdEventConverter.cc
user/caen-dt5742/python/: CAENDT5742Producer.py
user/etroc/: CMakeLists.txt  README.md
user/etroc/module/: CMakeLists.txt
user/etroc/module/src/: ETROC2RawEvent2StdEventConverter.cc
user/stcontrol/module/src/: UsbpixGen3NameRawEvent2StdEventConverter.cc
user/tlu/: CMakeLists.txt
user/tlu/hardware/: CMakeLists.txt
user/tlu/misc/eudet_tlu/: eudet_tlu_test.ini  eudet_tlu_test_busy.conf  eudet_tlu_test_working.conf
