include_directories(include)
aux_source_directory(src MODULE_SRC)

add_library(${EUDAQ_MODULE} SHARED ${MODULE_SRC})
target_link_libraries(${EUDAQ_MODULE} ${EUDAQ_CORE_LIBRARY} ${EUDAQ_TTREE_LIBRARY} ${EUDAQ_ROOT_MONITOR_LIBRARY})

set(EXE_CLI_ROOTCONVERTERWF caenCliRootWF)
add_executable(${EXE_CLI_ROOTCONVERTERWF} exe/caenCliRootWF.cxx)
target_link_libraries(${EXE_CLI_ROOTCONVERTERWF} ${EUDAQ_CORE_LIBRARY} ${EUDAQ_THREADS_LIB})
list(APPEND INSTALL_TARGETS ${EXE_CLI_ROOTCONVERTERWF})


install(TARGETS ${INSTALL_TARGETS}
  ${EUDAQ_MODULE}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
